kube/prometheus-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jerna
  name: prometheus-deployment
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.43.0
        ports:
        - containerPort: 9090
