kube/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jerna
  name: blazor-web-deployment
  labels:
    app: blazor-web
spec:
  selector:
    matchLabels:
      app: blazor-web
  template:
    metadata:
      labels:
        app: blazor-web
    spec:
      containers:
      - name: blazor-web
        image: 144.17.92.12:5000/jerna/blazor-web:${GITHUB_RUN_ID}
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080 #8975
          initialDelaySeconds: 5
          periodSeconds: 5 
        readinessProbe:
          httpGet:
            path: /health
            port: 8080 #8975
          initialDelaySeconds: 5
          periodSeconds: 5
