kube/loki-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: jerna
  name: loki-service
spec:
  type: ClusterIP
  selector: 
    app: loki
  ports: 
    - port: 3100
      targetPort: 3100
