kube/prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: jerna
  name: prometheus-service
spec:
  type: ClusterIP
  selector: 
    app: prometheus
  ports: 
    - port: 9090
      targetPort: 9090
