kube/web-svc.yml
apiVersion: v1
kind: Service
metadata:
 namespace: jerna
 name: blazor-web-service
spec: 
  type: ClusterIP
  selector:
    app: blazor-web
  ports:
    - port: 80
      targetPort: 8080
