kube/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: jerna
  name: blazor-web-ingress
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-alex-production
spec: 
  tls:
  - hosts:
    - jernaschools.alex-kube.duckdns.org
    secretName: jernaschools-tls-production
  ingressClassName: nginx
  rules: 
  - host: jernaschools.alex-kube.duckdns.org
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: blazor-web-service
            port:
              number: 80
